# popup-bar

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RULE.md  STATUS.md  fix_useItemReorder.cjs  index.html  package-lock.json  package.json  plan.md  playwright_test.py  playwright_test2.py  playwright_test3.py  playwright_test4.py  pnpm-lock.yaml  start_app.js  test_playwright.py  tsconfig.json  vite.config.ts
.Jules/: palette.md
.github/workflows/: ci.yml  windows-installer.yml
.jules/: bolt.md  palette.md
ARCHIVED_OLD/: check_output.txt  check_output_2.txt  error.txt  error_utf8.txt  full_output.txt  full_output_utf8.txt
docs/adrs/: ADR-001-tauri-statt-electron.md  ADR-002-sqlite-statt-json.md  ADR-003-event-driven-architektur.md  ADR-004-plattform-trait-abstraktion.md  ADR-005-glasmorphism-strategie.md
docs/architecture/: ARCHITECTURE.md  ICON-LAYOUT-PASS.md  (+6 more)
scripts/: agent_heartbeat.ps1  build-installer.ps1
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  cargo_check_output.txt  check_error.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_icon_cache_source_path.sql  0003_add_container.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  settings_commands.rs  shelf_commands.rs  system_commands.rs
src-tauri/src/modules/: config.rs  dnd_handler.rs  hotzone.rs  icon_resolver.rs  launcher.rs  mod.rs  shelf_store.rs  window_manager.rs
src-tauri/src/modules/platform/: linux.rs  macos.rs  mod.rs  windows.rs
(+37 files in other folders)
