[package]
name = "popup-bar"
version = "0.1.0"
edition = "2021"
description = "Cross-platform desktop popup bar with glassmorphism"

[lib]
name = "popup_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-sql = { version = "2.2", features = ["sqlite"] }
tauri-plugin-shell = "2.2"
tauri-plugin-autostart = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
window-vibrancy = "0.5"
base64 = "0.22"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Graphics_GdiPlus", "Win32_System_Com", "Win32_System_Memory", "Win32_UI_Shell", "Win32_Storage_FileSystem"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.2"
